--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,41 @@
 @import 'https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css';
 
+body {
+    padding: 15px;
+}
+
 .product-info,
 .product-image {
     display: inline-block;
 }
 
-input {
+input,
+textarea,
+select {
     display: block;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+        'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1rem;
+    color: #4a4a4a;
+    width: 220px;
+    margin-bottom: 1rem;
 }
 
 img {
     width: 150px;
+}
+
+form {
+    padding-top: 30px;
+    /* text-align: left;
+    margin: auto;
+    display: table; */
+}
+
+.log-in-form input,
+.register-form input {
+    line-height: 2rem;
+    margin-top: 5px;
 }
 
 .hidden {
