--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,15 @@ form {
     line-height: 2rem;
     cursor: pointer;
 }
+
+.create-product-btn {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    opacity: 0.95;
+    width: 100%;
+    height: 80px;
+    padding: 20px;
+    text-align: center;
+}
