ADD: Links from register to login and vice versa

--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,8 @@ form {
     padding: 20px;
     text-align: center;
 }
+
+.login-register-toggle {
+    padding: 20px 20px;
+    text-align: center;
+}
