--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,23 @@ body {
     padding: 15px;
 }
 
-.product-info,
-.product-image {
-    display: inline-block;
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+}
+
+main {
+    max-width: 300px;
+    margin: auto;
+    margin-top: 120px;
+}
+
+input,
+select.condition {
+    height: 2rem;
 }
 
 input,
@@ -17,25 +31,64 @@ select {
         'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1rem;
     color: #4a4a4a;
-    width: 250px;
+    width: 300px;
     margin-bottom: 1rem;
+    padding: 5px;
 }
 
 button {
-    width: 250px;
+    width: 300px;
+    margin-top: 20px;
     text-transform: uppercase;
-    /* font-weight: bold; */
 }
 
 img {
-    width: 150px;
+    width: 300px;
+    margin: 0 auto;
 }
 
 form {
     padding-top: 30px;
-    /* text-align: left;
-    margin: auto;
-    display: table; */
+}
+
+.nav-menu {
+    position: fixed;
+    right: 20px;
+    z-index: 1;
+    /* background-color: #fff; */
+    /* ****** */
+}
+
+.title,
+.subtitle {
+    text-align: center;
+    padding: 5px;
+}
+
+.title {
+    padding-top: 30px;
+}
+
+.subtilte {
+    margin: 20px 0;
+    color: red;
+}
+
+.product-info,
+.product-image {
+    display: inline-block;
+    display: flex;
+    flex-direction: column;
+}
+
+/* .card-product-hover {
+    background-color: white;
+    opacity: 0.85;
+} */
+
+.no-items-in-product-list {
+    text-align: center;
+    line-height: 3rem;
 }
 
 .log-in-form input,
@@ -48,12 +101,12 @@ form {
     display: none;
 }
 
-.delete-btn {
+/* .delete-btn {
     width: initial;
     height: 1rem;
     padding: 12px;
     margin-top: 5px;
-}
+} */
 
 .product {
     line-height: 2rem;
@@ -64,10 +117,10 @@ form {
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: #fff;
+    background-color: #f6f0f0;
     opacity: 0.95;
     width: 100%;
-    height: 80px;
+    height: 120px;
     padding: 20px;
     text-align: center;
 }
