--- a/css/error.css
+++ b/css/error.css
@@ -1,9 +1,7 @@
 .global-errors {
     position: fixed;
-    /* bottom: 40px; */
+    bottom: 40px;
     width: 100%;
     opacity: 0.9;
-
-    /* PROVISIONAL - para que no se solape con browserSync  */
-    margin-top: 15px;
+    z-index: 1;
 }
